--- a/terms.html
+++ b/terms.html
@@ -151,6 +151,38 @@
 
     <p>If you have any questions regarding these terms, feel free to contact us at support@yourwebsite.com.</p>
   </div>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-grid">
+        <div class="footer-brand">
+          <h3>Model Guru</h3>
+          <p>Your AI Model Discovery & Analytics Hub</p>
+          <select id="languageSwitcher" class="language-switcher">
+            <option value="en">English</option>
+            <option value="zh">中文</option>
+          </select>
+        </div>
+        <div class="footer-links-container">
+          <h4>Links</h4>
+          <ul class="footer-links">
+            <li><a href="about.html" class="footer-link" data-i18n="footer.about">About</a></li>
+            <li><a href="privacy.html" class="footer-link" data-i18n="footer.privacy">Privacy</a></li>
+            <li><a href="terms.html" class="footer-link" data-i18n="footer.terms">Terms</a></li>
+            <li><a href="contact.html" class="footer-link" data-i18n="footer.contact">Contact</a></li>
+            <li><a href="reports.html" class="footer-link" data-i18n="nav.reports">Reports</a></li>
+            <li><a href="methodology.html" class="footer-link" data-i18n="footer.methodology">Our Methodology</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2024 Model Guru. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
+
+  <script src="js/main.js"></script>
+  <script src="js/i18n.js"></script>
 </body>
 
 </html>
