--- a/terms.html
+++ b/terms.html
@@ -149,7 +149,7 @@
     <h2>6. Changes to the Terms</h2>
     <p>We may update these terms from time to time. Any changes will be posted on this page, and the updated terms will be effective immediately...</p>
 
-    <p>If you have any questions regarding these terms, feel free to contact us at support@yourwebsite.com.</p>
+    <p>If you have any questions regarding these terms, feel free to contact us at support@modelguru.deepseek.diy.</p>
   </div>
 
   <footer class="footer">
@@ -169,7 +169,7 @@
             <li><a href="about.html" class="footer-link" data-i18n="footer.about">About</a></li>
             <li><a href="privacy.html" class="footer-link" data-i18n="footer.privacy">Privacy</a></li>
             <li><a href="terms.html" class="footer-link" data-i18n="footer.terms">Terms</a></li>
-            <li><a href="contact.html" class="footer-link" data-i18n="footer.contact">Contact</a></li>
+            <li><a href="mailto:support@modelguru.deepseek.diy" class="footer-link" data-i18n="footer.contact">Contact</a></li>
             <li><a href="reports.html" class="footer-link" data-i18n="nav.reports">Reports</a></li>
             <li><a href="methodology.html" class="footer-link" data-i18n="footer.methodology">Our Methodology</a></li>
           </ul>
