--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             <h2 data-i18n="platforms.title">Platforms We Track</h2>
             <div class="platforms-grid">
                 <div class="platform-card">
-                    <img src="img/svg/huggingface-logo.svg" alt="Hugging Face" class="platform-logo">
+                    <img src="img/huggingface-logo.svg" alt="Hugging Face" class="platform-logo">
                     <h3 class="platform-name">Hugging Face</h3>
                     <p class="platform-description">Leading platform for open-source AI models and datasets</p>
                     <div class="platform-metrics">
@@ -370,7 +370,7 @@
                     </div>
                 </div>
                 <div class="platform-card">
-                    <img src="img/svg/replicate-logo.svg" alt="Replicate" class="platform-logo">
+                    <img src="img/replicate-logo.svg" alt="Replicate" class="platform-logo">
                     <h3 class="platform-name">Replicate</h3>
                     <p class="platform-description">Cloud platform for running machine learning models</p>
                     <div class="platform-metrics">
@@ -385,7 +385,7 @@
                     </div>
                 </div>
                 <div class="platform-card">
-                    <img src="img/svg/stability-logo.svg" alt="Stability AI" class="platform-logo">
+                    <img src="img/stability-logo.svg" alt="Stability AI" class="platform-logo">
                     <h3 class="platform-name">Stability AI</h3>
                     <p class="platform-description">Pioneer in open-source AI models and APIs</p>
                     <div class="platform-metrics">
@@ -555,7 +555,7 @@
                 <!-- Blog Card 1 -->
                 <div class="blog-card">
                     <div class="blog-image">
-                        <img src="img/svg/blog-placeholder.svg" alt="Stable Diffusion Guide">
+                        <img src="img/blog-placeholder.svg" alt="Stable Diffusion Guide">
                     </div>
                     <div class="blog-content">
                         <span class="blog-date">April 15, 2024</span>
@@ -568,7 +568,7 @@
                 <!-- Blog Card 2 -->
                 <div class="blog-card">
                     <div class="blog-image">
-                        <img src="img/svg/blog-placeholder.svg" alt="LLM Trends 2024">
+                        <img src="img/blog-placeholder.svg" alt="LLM Trends 2024">
                     </div>
                     <div class="blog-content">
                         <span class="blog-date">April 10, 2024</span>
@@ -581,7 +581,7 @@
                 <!-- Blog Card 3 -->
                 <div class="blog-card">
                     <div class="blog-image">
-                        <img src="img/svg/blog-placeholder.svg" alt="Model Comparison">
+                        <img src="img/blog-placeholder.svg" alt="Model Comparison">
                     </div>
                     <div class="blog-content">
                         <span class="blog-date">April 5, 2024</span>
@@ -783,7 +783,7 @@
                             <!-- Model Card 1 -->
                             <div class="model-card">
                                 <div class="model-card-header">
-                                    <img src="img/svg/huggingface-logo.svg" alt="Hugging Face" class="platform-logo">
+                                    <img src="img/huggingface-logo.svg" alt="Hugging Face" class="platform-logo">
                                     <span class="model-date">Added 2 days ago</span>
         </div>
                                 <h3 class="model-title">SDXL-Turbo</h3>
@@ -805,7 +805,7 @@
                             <!-- Model Card 2 -->
                             <div class="model-card">
                                 <div class="model-card-header">
-                                    <img src="img/svg/replicate-logo.svg" alt="Replicate" class="platform-logo">
+                                    <img src="img/replicate-logo.svg" alt="Replicate" class="platform-logo">
                                     <span class="model-date">Added 1 week ago</span>
                     </div>
                                 <h3 class="model-title">Mixtral-8x7B</h3>
@@ -827,7 +827,7 @@
                             <!-- Model Card 3 -->
                             <div class="model-card">
                                 <div class="model-card-header">
-                                    <img src="img/svg/stability-logo.svg" alt="Stability AI" class="platform-logo">
+                                    <img src="img/stability-logo.svg" alt="Stability AI" class="platform-logo">
                                     <span class="model-date">Added 3 days ago</span>
                                 </div>
                                 <h3 class="model-title">Stable Audio</h3>
