--- a/privacy.html
+++ b/privacy.html
@@ -79,7 +79,7 @@
   </header>
 
   <section>
-    <p>This Privacy Policy explains what personal data is collected when you use the Impulse – Brain Training Games mobile app (the “App”) and the services provided through it (together with the App, the “Service”), how such personal data will be used, and shared.</p>
+    <p>This Privacy Policy explains what personal data is collected when you use the Impulse – Brain Training Games mobile app (the "App") and the services provided through it (together with the App, the "Service"), how such personal data will be used, and shared.</p>
     <p>BY USING THE SERVICE, YOU PROMISE US THAT (I) YOU HAVE READ, UNDERSTAND AND AGREE TO THIS PRIVACY POLICY, AND (II) YOU ARE OVER 16 YEARS OF AGE (OR HAVE HAD YOUR PARENT OR GUARDIAN READ AND AGREE TO THIS PRIVACY POLICY FOR YOU). If you do not agree, or are unable to make this promise, you must not use the Service.</p>
   </section>
 
@@ -133,6 +133,7 @@
     </ul>
   </section>
 
+  <!-- Footer -->
   <footer class="footer">
     <div class="container">
       <div class="footer-grid">
@@ -150,7 +151,7 @@
             <li><a href="about.html" class="footer-link" data-i18n="footer.about">About</a></li>
             <li><a href="privacy.html" class="footer-link" data-i18n="footer.privacy">Privacy</a></li>
             <li><a href="terms.html" class="footer-link" data-i18n="footer.terms">Terms</a></li>
-            <li><a href="contact.html" class="footer-link" data-i18n="footer.contact">Contact</a></li>
+            <li><a href="mailto:support@modelguru.deepseek.diy" class="footer-link" data-i18n="footer.contact">Contact</a></li>
             <li><a href="reports.html" class="footer-link" data-i18n="nav.reports">Reports</a></li>
             <li><a href="methodology.html" class="footer-link" data-i18n="footer.methodology">Our Methodology</a></li>
           </ul>
@@ -162,8 +163,21 @@
     </div>
   </footer>
 
-  <script src="js/main.js"></script>
-  <script src="js/i18n.js"></script>
+  <!-- Scripts -->
+  <script type="module" src="js/i18n.js"></script>
+  <script type="module" src="js/main.js"></script>
+  <script>
+    // Particles.js initialization (copy from index.html if needed)
+    window.addEventListener('load', function() {
+      if (typeof particlesJS !== 'undefined') {
+        particlesJS('particles-js', {
+          // Paste particles.js config here
+        });
+      } else {
+        console.warn('particles.js not loaded');
+      }
+    });
+  </script>
 </body>
 
 </html>
